--- a/templates/result.html
+++ b/templates/result.html
@@ -8,22 +8,19 @@
 
 	<header>
 		<div class="container">
-		<div id="brandname">
-			ML App
-		</div>
-		<h2>Spam Detector For SMS Messages</h2>
+		
+
+		<h2 style="text-align:center;">Spam Detector For SMS Messages</h2>
 		
 	</div>
 	</header>
-	<p style="color:blue;font-size:20;text-align: center;"><b>Results for Comment</b></p>
-	<div class="results">
-
+	
 
 		
 	{% if prediction == 1%}
-	<h2 style="color:red;">Spam</h2>
+	<h2 style="color:red; text-align:center;">Its a Spam</h2>
 	{% elif prediction == 0%}
-	<h2 style="color:green ;">Not a Spam (It is a Ham)</h2>
+	<h2 style="color:green ; text-align:center;">Its a Ham</h2>
 	{% endif %}
 
 	</div>
